@@ -79,7 +79,7 @@
       </button>
       <span class="navbar-brand">
         <a class="navbar-link" href="index.html">finbif</a>
-        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.3.0</span>
+        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.3.0.9000</span>
       </span>
     </div>
 
@@ -151,13 +151,13 @@
 
     <p>Morris W (2020).
 <em>Introduction to the finbif package</em>.
-R package version 0.3.0, <a href="https://luomus.github.io/finbif/articles/finbif.html">https://luomus.github.io/finbif/articles/finbif.html</a>. 
+R package version 0.3.0.9000, <a href="https://luomus.github.io/finbif/articles/finbif.html">https://luomus.github.io/finbif/articles/finbif.html</a>. 
 </p>
     <pre>@Manual{,
   title = {Introduction to the finbif package},
   author = {William Morris},
   year = {2020},
-  note = {R package version 0.3.0},
+  note = {R package version 0.3.0.9000},
   url = {https://luomus.github.io/finbif/articles/finbif.html},
 }</pre>
 
