@@ -79,7 +79,7 @@
       </button>
       <span class="navbar-brand">
         <a class="navbar-link" href="../index.html">finbif</a>
-        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.3.0</span>
+        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.3.0.9000</span>
       </span>
     </div>
 
@@ -151,7 +151,7 @@
 
     <div id="finbif-0-3-0" class="section level1">
 <h1 class="page-header" data-toc-text="0.3.0">
-<a href="#finbif-0-3-0" class="anchor"></a>finbif 0.3.0<small> Unreleased </small>
+<a href="#finbif-0-3-0" class="anchor"></a>finbif 0.3.0<small> 2020-04-23 </small>
 </h1>
 <div id="new-features" class="section level4">
 <h4 class="hasAnchor">
